Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50044

Deadlock in destruction of objects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.0 RC
    • 5.6.0
    • Qt3D
    • Debian stretch, 4.2 kernel, Qt 5.6 built from the git repository
    • 662be35bc6e288a25756eb2ee87349f099e7a8a7

    Description

      Hello,
      I'm getting a deadlock while objects are destroyed when QLogicAspect has been registered. I'm using two GL surfaces with two aspect engines and am putting only the bare functionality required to make it work. The project initializes fine, but when it comes to destruction the pooled threads are locked and the destruction can't continue. Attached is a full project to reproduce the issue. Interestingly it only appears if I register the logic aspect, without it it works fine. Additionally if I allocate the QOpenGLWindow in the heap I may or may not get a deadlock, sometimes I do, sometimes the application works fine and exits gracefully. I'm also attaching a full backtrace (after deadlock occurring the threads were interrupted and backtrace was extracted) to make tracing this issue easier.

      Kind regards.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              e0150566 Janne Roine
              kshegunov Konstantin Shegunov
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes