Fix deadlock when quitting aspect manager

Stop waiting for next frame advance if we are about to shut down.

Change-Id: I334c5afa69eb262d6e4e7139acc826fbd7aa9263
Task-number: QTBUG-50044
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>